# LaunchKeyVolcas

./: .gitignore  CMakeLists.txt  README.md  config.yml  launchkey.geany  main  main.cpp
inc/: BassState.hpp  Config.hpp  ConfigInOut.hpp  Device.hpp  MenuState.hpp  Screen.hpp  ScreenState.hpp  Sequence.hpp  Sequencer.hpp  SequencerView.hpp  Session.hpp  Track.hpp  VolcaBass.hpp  VolcaKeys.hpp  Volcas.hpp  application.hpp  midi.hpp
src/: BassState.cpp  CMakeLists.txt  Config.cpp  ConfigInOut.cpp  KeysState.cpp  MenuState.cpp  Screen.cpp  ScreenState.cpp  Sequencer.cpp  application.cpp  launchkey.geany  main  main.cpp  midi.cpp
src/devices/: Device.cpp  VolcaBass.cpp  VolcaKeys.cpp
src/inc/: KeysState.hpp  ScreenState.hpp  application.hpp
src/sequencer/: Sequence.cpp  Sequencer.cpp  SequencerView.cpp  Session.cpp
